# swd3-testing-ghcodespaces-demo-repo

./: .buildinfo  README.md  genindex.html  hypot.html  index.html  mkdocs.yml  mkdocs_tutorial.md  modules.html  objects.inv  pyproject.toml  search.html
.devcontainer/: devcontainer.json
.devcontainer/env-files/: linting-env.yml
.doctrees/: environment.pickle  hypot.doctree  index.doctree  modules.doctree
.github/workflows/: build-package.yml  build-release.yml  publish_package.yml  python-app.yml  python-package.yml
docs/: conf.py  index.md
docs/_build/doctrees/: environment.pickle  hypot.doctree  index.doctree
docs/_build/html/: .buildinfo  index.html  modules.html  objects.inv  search.html  searchindex.js
site/: 404.html  index.html
sphinxdocs/: conf.py  index.rst
sphinxdocs/_build/doctrees/: environment.pickle  hypot.doctree  modules.doctree
sphinxdocs/_build/doctrees/source/: hypot.doctree  modules.doctree
sphinxdocs/_build/html/: .buildinfo  genindex.html  hypot.html  objects.inv  searchindex.js
sphinxdocs/_build/html/source/: hypot.html  modules.html
sphinxdocs/source/: modules.rst
src/hypot/: __init__.py  calc.py
tests/: test_functions.py  test_integration.py
